

<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Player1">        Score %d    </string>
    <string name="Player2">        Score %d    </string>
    <string name="player1"> Player 1 </string>
    <string name="player2"> Player 2 </string>

    <string name="language_options">Custom Spinner</string>

    <string name="player">P1 vs P2</string>
    <string name="Setting">Setting</string>
    <string name="Version">Version 0.1</string>
    <string name="Move">Number Of Moves</string>
    <string name="Turn">X Turn</string>
    <string name="Menu">Menu</string>
    <string name="Score1">Player1</string>
    <string name="Score2">Player2</string>
    <string name="Winner">And the winner is:</string>
    <string name="Winner_Name">Winner</string>
    <string name="Restart">Restart</string>
    <string name="Start">Start</string>
    <string name="Dark_Off">DarkMode: Off</string>
    <string name="Dark_On">DarkMode: On</string>
    <string name="Sound_On">Sound: On</string>
    <string name="Sound_Off">Sound: Off</string>
    <string name="Back">Back</string>


    <string-array name="list">
        <item>English</item>
        <item>Espanol</item>
    </string-array>





</resources>