<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingsPage"
    android:background="@color/colorPrimary">


        <TextView
            android:id="@+id/textView"
            android:layout_width="329dp"
            android:layout_height="93dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/Setting"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="59dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintStart_toEndOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/spinner"
            app:srcCompat="@drawable/arrow" />

        <ToggleButton
            android:id="@+id/theme"
            android:layout_width="355dp"
            android:layout_height="96dp"
            android:layout_marginTop="52dp"
            android:background="@color/colorAccent"

            android:fontFamily="@font/chango"
            android:textAlignment="center"
            android:textColor="@color/colorFont"
            android:textOff="@string/Dark_Off"
            android:textOn="@string/Dark_On"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="267dp"
            android:layout_height="98dp"
            android:layout_marginTop="52dp"
            android:background="@color/colorAccent"
            android:entries="@array/list"
            android:popupBackground="@color/colorAccent"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/theme"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/button3"
            android:layout_width="355dp"
            android:layout_height="96dp"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/chango"
            android:textOff="@string/Sound_On"
            android:textOn="@string/Sound_Off"
            android:textSize="30sp"
            android:textColor="@color/colorFont"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Button
            android:id="@+id/button4"
            android:layout_width="191dp"
            android:layout_height="62dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/chango"
            android:text="@string/Back"
            android:textColor="@color/colorFont"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.828" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="97dp"
            android:text="@string/note"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/theme"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="@+id/theme"
            app:layout_constraintTop_toTopOf="@+id/theme" />


</androidx.constraintlayout.widget.ConstraintLayout>